목록 레이아웃을 수정하고, 변경할 레이아웃 파일을 추가합니다.

--- a/layouts/_default/li.html
+++ b/layouts/_default/li.html
@@ -10,7 +10,7 @@
 			</span>
 			<span class="lg:w-1/4 flex-shrink-0 mb-3 lg:mb-0">
 			<span class="block overflow-hidden relative" style="padding-bottom:67.8%">
-				<img class="absolute h-full w-full object-cover" src="{{ .Params.Featured_image }}" alt="{{ .Title }}">
+				<img class="absolute h-full w-full object-cover" src="{{ .Params.image }}" alt="{{ .Title }}">
 			</span>
 			</span>
 	</a>
