공지사항 레이아웃을 정리합니다.

--- a/layouts/connect/list.html
+++ b/layouts/connect/list.html
@@ -7,7 +7,7 @@
       <h1 class="text-4xl mb-4 text-aa-gray-900 font-bold">{{ .Title }}</h1>
       {{ partial "marketing/sharingbutton" . }}
       {{ partial "marketing/banner--section-single" . }} 
-      <div class="flex text-sm text-aa-700 py-2 border-aa-purple-500 border-b-2 mb-12">
+      <div class="flex text-sm text-aa-700 py-2 border-aa-purple-500 border-b-2">
         <span class="w-4/6 text-center">제목</span>
         <span class="w-1/6 text-center">날짜</span>
         <span class="w-1/6 text-center">작성자</span>
