--- a/layouts/_default/li.html
+++ b/layouts/_default/li.html
@@ -1,17 +1,25 @@
-<li class="mb-12">
-	<a href="{{ .Permalink }}" class="flex flex-col-reverse lg:flex-row lg:items-center lg:justify-between">
-			<span class="lg:w-3/4 text-aa-gray-500 flex-shrink-0 lg:pr-5">
-			<b class="block mb-2 text-2xl text-aa-gray-900">{{ .Title }}</b>
-			<span class="block mb-2 leading-7 line-clamp-2">{{ .Summary }}</span>
-			<span class="block text-sm">
-				{{ .Date.Format "2006년 1월 2일" }}
-				<em class="text-aa-purple-500 not-italic ml-2">{{ .Params.Author }}</em>
-			</span>
-			</span>
-			<span class="lg:w-1/4 flex-shrink-0 mb-3 lg:mb-0">
-			<span class="block overflow-hidden relative" style="padding-bottom:67.8%">
-				<img class="absolute h-full w-full object-cover" src="{{ .Params.image }}" alt="{{ .Title }}">
-			</span>
-			</span>
-	</a>
-</li>
+{{ if eq .Parent.RelPermalink "/connect/notice/"}}
+	<li class="flex py-6 border-b border-aa-gray-200 text-aa-gray-600">
+		<a class="w-4/6 px-4 text-aa-gray-700 hover:text-aa-purple-500" href="{{ .Permalink }}">{{ .Title }}</a>
+		<span class="w-1/6 text-center"><time>{{ .Date.Format "2006년 1월 2일" }}</time></span>
+		<span class="w-1/6 text-center">{{ .Params.Author }}</span>
+	</li>  
+{{ else }}
+  <li class="mb-12">
+    <a href="{{ .Permalink }}" class="flex flex-col-reverse lg:flex-row lg:items-center lg:justify-between">
+      <span class="lg:w-3/4 text-aa-gray-500 flex-shrink-0 lg:pr-5">
+        <b class="block mb-2 text-2xl text-aa-gray-900">{{ .Title }}</b>
+        <span class="block mb-2 leading-7 line-clamp-2">{{ .Summary }}</span>
+        <span class="block text-sm">
+          {{ .Date.Format "2006년 1월 2일" }}
+          <em class="text-aa-purple-500 not-italic ml-2">{{ .Params.Author }}</em>
+        </span>
+      </span>
+      <span class="lg:w-1/4 flex-shrink-0 mb-3 lg:mb-0">
+        <span class="block overflow-hidden relative" style="padding-bottom:67.8%">
+          <img class="absolute h-full w-full object-cover" src="{{ .Params.image | absURL }}" alt="{{ .Title }}">
+        </span>
+      </span>
+    </a>
+  </li>
+{{ end }}
