--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,18 +7,203 @@
   <div class="contents-area" id="main-content">
       {{/* 슬라이드 배너 홈페이지용 */}}
       {{ partial "marketing/banner--ww--slide" . }}
-      {{/* 최근활동  */}}
-      {{ partial "marketing/featured--activity" . }}
-      {{/* 공지사항  */}}
-      {{/* 보도자료  */}}      
-      {{ partial "marketing/list--text" . }}
+      
+      {{/* 활동소개  */}}
+      <div class="container pt-12 py-20">
+        <div class="relative">
+          <h1 class="text-4xl mb-4 text-aa-gray-900 font-bold">활동소개</h1>
+          <a class="absolute top-2 right-0 text-aa-purple-500" href="/items">최근 활동 모두보기</a>
+        </div>
+        {{/*  <p class="text-lg mb-8 text-aa-gray-700">All / Updates / 日本語 / 기림사업 / 나비기금 / 동영상 / 소식 / 모금소식 / 생존자복지쉼터소식 / 연구조사 / 교육연대사업 / 이번 주 수요시위 / 일본국상대소송 / 장학사업 / 전시성폭력재발방지</p> */}}
+        <ul class="masonry01 mb-20">
+          <li class="grid-sizer"></li>
+          <li class="gutter-sizer"></li>
+          {{ $settings := .Site.Params }}
+          {{ range first 8 (where site.RegularPages "Type" "items") }}
+          <li class="mb-10 grid-item">
+            <a href="{{ .Permalink }}">
+              <span class="overflow-hidden mr-7">
+                {{ range .Params.Components }}
+                {{ $fileExtension := index (last 1 (split . ".")) 0 }}
+                {{ $src := partial "base/cf-image.html" (dict "style" "thumb" "src" . "settings" $settings) }}
+                <img class="w-full" src="{{ $src }}" alt="{{ $.Title }}">
+                {{ end }}
+              </span>
+              <span class="block">
+                <b class="text-aa-gray-900 text-xl font-normal mb-2 block">{{ .Title }}</b>
+              </span>
+            </a>
+          </li>
+          {{ end }}
+        </ul>
+      </div>
+        <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
+        <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+        <script>
+        window.addEventListener('DOMContentLoaded', function(){
+          imagesLoaded( '.masonry01', function() {
+            new Masonry( '.masonry01', {
+              "itemSelector": ".grid-item",
+              "columnWidth": ".grid-sizer",
+              "gutter": ".gutter-sizer",
+              "percentPosition": "true"
+            })
+          })
+        })
+        </script>
+        
+      {{/* 공지사항 / 보도자료 */}}    
+      <div class="container pt-12 pb-12">
+        <h1 class="text-4xl mb-4 text-aa-gray-900 font-bold">공지사항</h1>
+        <div class="flex text-sm text-aa-700 py-2 border-aa-purple-500 border-b-2">
+            <span class="w-4/6 text-center">제목</span>
+            <span class="w-1/6 text-center">날짜</span>
+            <span class="w-1/6 text-center">작성자</span>
+        </div>
+        <ul class="mb-20">
+            {{ range first 5 (where site.RegularPages "Type" "connect") }}
+                <li class="flex py-6 border-b border-aa-gray-200 text-aa-gray-600">
+                    <a class="w-4/6 px-4 text-aa-gray-700 hover:text-aa-purple-500" href="{{ .Permalink }}">{{ .Title }}</a>
+                    <span class="w-1/6 text-center"><time>{{ .Date.Format "2006년 1월 2일" }}</time></span>
+                    <span class="w-1/6 text-center">{{ .Params.Author }}</span>
+                </li>
+            {{ end }}
+        </ul>
+      </div>
+      <div class="container pt-12 pb-12">
+        <h1 class="text-4xl mb-4 text-aa-gray-900 font-bold">보도자료</h1>
+        <div class="flex text-sm text-aa-700 py-2 border-aa-purple-500 border-b-2">
+            <span class="w-4/6 text-center">제목</span>
+            <span class="w-1/6 text-center">날짜</span>
+            <span class="w-1/6 text-center">작성자</span>
+        </div>
+        <ul class="mb-20">
+            {{ range first 5 (where site.RegularPages "Type" "connect") }}
+                <li class="flex py-6 border-b border-aa-gray-200 text-aa-gray-600">
+                    <a class="w-4/6 px-4 text-aa-gray-700 hover:text-aa-purple-500" href="{{ .Permalink }}">{{ .Title }}</a>
+                    <span class="w-1/6 text-center"><time>{{ .Date.Format "2006년 1월 2일" }}</time></span>
+                    <span class="w-1/6 text-center">{{ .Params.Author }}</span>
+                </li>
+            {{ end }}
+        </ul>
+      </div>      
 
-      {{/* 메세지 */}}
       {{/* 박물관 안내 */}}
-      {{ partial "marketing/banner--welcome" . }}
+      <div class="relative bg-aa-gray-100 bg-no-repeat">
+        <div class="container xl:py-20 pt-11 pb-9 flex">
+            <div class="xl:w-1/2 lg:w-1/2 w-full text-center xl:pr-10">
+                <h2 class="text-4xl text-aa-gray-800 mb-8 leading-tight">전쟁과여성인권박물관을 <br/>소개합니다</h2>
+                <p class="text-lg mb-16">일본군'위안부' 생존자들이 겪었던 역사를 기억하고 교육하며, <br/>
+                    일본군'위안부'문제를 해결하기 위해 활동하는 공간입니다. <br/>
+                    또한 지금도 계속되고 있는 전시성폭력문제를 해결하기 위해 <br/>
+                    연대하며 전쟁과 여성폭력이 없는 세상을 만들어 나가는 행동하는 <br/>
+                    박물관입니다.</p>
+                <a class="text-lg text-aa-purple-500 inline-flex items-center" href="www.womenandwarmuseum.net" target="_blank">박물관 홈페이지로 이동
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                        <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
+                    </svg>
+                </a>
+            </div>
+        </div>
+        <div class="lg:absolute lg:left-1/2 lg:top-0 lg:h-full h-80 lg:w-1/2 bg-no-repeat bg-contain bg-center" style="background-image:url(/images/bg-main-welcome-wwm.jpg)"></div>
+      </div>
 
-      {{ partial "marketing/list--thumb" . }}
-      {{/* 미디어  */}}
+      <div class="container pt-12 pb-12">
+        <h1 class="text-4xl mb-4 text-aa-gray-900 font-bold">메세지</h1>
+        <ul>
+            {{ range first 2 (where site.RegularPages "Type" "connect") }}
+            <li class="mb-12">
+                <a href="#" class="flex flex-col-reverse lg:flex-row lg:items-center lg:justify-between">
+                    <span class="lg:w-2/3 text-aa-gray-500 flex-shrink-0 lg:pr-5">
+                        <b class="block mb-2 text-2xl text-aa-gray-900">{{ .Title }}</b>
+                        <span class="block mb-2 leading-7 line-clamp-2">{{ .Summary }}</span>
+                        <span class="block text-sm">
+                            {{ .Date.Format "2006년 1월 2일" }}
+                            <em class="text-aa-purple-500 not-italic ml-2">{{ .Params.Author }}</em>
+                        </span>
+                    </span>
+                    <span class="lg:w-1/3 flex-shrink-0 mb-3 lg:mb-0">
+                        <span class="block overflow-hidden relative" style="padding-bottom:67.8%">
+                            <img class="absolute w-fullx object-cover" src="{{ .Params.image }}" alt="">
+                        </span>
+                    </span>
+                </a>
+            </li>
+            {{ end }}
+        </ul>
+      </div>
+      {{/* 팩트체크 - data.yml에서 편집하도록 처리 */}}
+      <section class="container pt-12 pb-12 text-gray-600 body-font">
+        <div class="px-5 py-5 mx-auto">
+          <h1 class="text-4xl mb-4 text-aa-gray-900 font-bold">팩트체크</h1>
+        </div>
+        <div class="flex sm:-m-4 -mx-4 -mb-10 -mt-4 pb-12">
+          <div class="flex-1 p-4 md:w-1/3 sm:mb-0 mb-6">
+            <div class="h-64 overflow-hidden">
+              <img alt="content" class="object-cover object-center h-full w-full" src="https://womenandwar.net/kr/wp-content/uploads/2018/08/%E1%84%80%E1%85%AE%E1%86%AB%E1%84%8B%E1%85%AD%E1%86%BC%E1%84%90%E1%85%B3%E1%84%85%E1%85%A5%E1%86%A8%E1%84%8B%E1%85%B3%E1%84%85%E1%85%A9-%E1%84%8B%E1%85%B5%E1%84%83%E1%85%A9%E1%86%BC%E1%84%92%E1%85%A1%E1%84%82%E1%85%B3%E1%86%AB-%E1%84%8B%E1%85%B5%E1%86%AF%E1%84%87%E1%85%A9%E1%86%AB%E1%84%80%E1%85%AE%E1%86%AB%E1%84%89%E1%85%A5%E1%86%BC%E1%84%82%E1%85%A9%E1%84%8B%E1%85%A8%E1%84%8C%E1%85%A6-%E1%84%91%E1%85%B5%E1%84%92%E1%85%A2%E1%84%8C%E1%85%A1%E1%84%83%E1%85%B3%E1%86%AF-300x228.jpg">
+            </div>
+            <h2 class="text-xl font-medium title-font text-gray-900 mt-5">일본군성노예제란 ?</h2>
+            <p class="text-base leading-relaxed mt-2">Swag shoivdigoitch literally meditation subway tile tumblr cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical XOXO lumbersexual.</p>
+            <a class="text-lg text-aa-purple-500 inline-flex items-center pt-2" href="/comfort-women/meanings/">더 알아보기
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
+              </svg>
+            </a>
+          </div>
+          <div class="flex-1 p-4 md:w-1/3 sm:mb-0 mb-6">
+            <div class="rounded-none h-64 overflow-hidden">
+              <img alt="content" class="object-cover object-center h-full w-full" src="https://durumi.io/cdn-cgi/image/fit=scale-down,width=1920/https://wwm-r2.womenandwar.workers.dev/exhibition/ex-02/%ec%9a%b4%eb%8f%99%ec%82%ac%ea%b4%80/%ec%b9%a8%eb%ac%b5%ec%9d%84%ea%b9%a8%ed%8a%b8%eb%a6%ac%eb%8b%a4/%ec%b2%ab%ec%88%98%ec%9a%94%ec%a7%91%ed%9a%8c%20%ec%82%ac%eb%b3%b8.jpg">
+            </div>
+            <h2 class="text-xl font-medium title-font text-gray-900 mt-5">운동사</h2>
+            <p class="text-base leading-relaxed mt-2">Swag shoivdigoitch literally meditation subway tile tumblr cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical XOXO lumbersexual.</p>
+            <a class="text-lg text-aa-purple-500 inline-flex items-center pt-2" href="/about/greetings/">더 알아보기
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
+              </svg>
+            </a>
+          </div>
+          <div class="flex-1 p-4 md:w-1/3 sm:mb-0 mb-6">
+            <div class="rounded-none h-64 overflow-hidden">
+              <img alt="content" class="object-cover object-center h-full w-full" src="https://durumi.io/cdn-cgi/image/fit=scale-down,width=1920/https://wwm-r2.womenandwar.workers.dev/exhibition/ex-02/%ec%9a%b4%eb%8f%99%ec%82%ac%ea%b4%80/%ec%b9%a8%eb%ac%b5%ec%9d%84%ea%b9%a8%ed%8a%b8%eb%a6%ac%eb%8b%a4/1990.11.16%2037%ea%b0%9c%20%ec%97%ac%ec%84%b1%eb%8b%a8%ec%b2%b4%ec%99%80%20%ea%b0%9c%ec%9d%b8%eb%93%a4%ec%9d%b4%20%ec%b0%b8%ec%97%ac%ed%95%98%ec%97%ac%20%ed%95%9c%ea%b5%ad%ec%a0%95%ec%8b%a0%eb%8c%80%eb%ac%b8%ec%a0%9c%eb%8c%80%ec%b1%85%ed%98%91%ec%9d%98%ed%9a%8c%20%ea%b2%b0%ec%84%b1.jpg">
+            </div>
+            <h2 class="text-xl font-medium title-font text-gray-900 mt-5">피해자들의 외침 및 증언</h2>
+            <p class="text-base leading-relaxed mt-2">Swag shoivdigoitch literally meditation subway tile tumblr cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical XOXO lumbersexual.</p>
+            <a class="text-lg text-aa-purple-500 inline-flex items-center pt-2" href="/about/greetings/">더 알아보기
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
+              </svg>
+            </a>
+          </div>
+        </div>
+        <div class="flex sm:-m-4 -mx-4 -mb-10 -mt-4">
+          <div class="flex-none p-4 w-1/3 sm:mb-0 mb-6">
+            <div class="h-64 overflow-hidden">
+              <img alt="content" class="object-cover object-center h-full w-full" src="https://womenandwar.net/kr/wp-content/uploads/2021/04/IMG_7733-877x470.jpg">
+            </div>
+            <h2 class="text-xl font-medium title-font text-gray-900 mt-5">일본국 상대 소송</h2>
+            <p class="leading-relaxed mt-2">2021. 1. 8. 서울중앙지방법원(제34민사부, 재판장 김정곤)은 일본군‘위안부’ 피해자들이 일본국을 상대로 제기한 소송에서 원고들에 대한 피고 일본국의 손해배상책임을 인정하는 기념비적인 판결을 선고했습니다. 피해자들의 절박한 호소에 귀기울이며 ‘인권의 최후 보루’로서 책무를 다한 판결이었습니다. 일본정부는 하루빨리 일본군‘위안부’ 문제에 대한 사실인정, 공식사죄와 추모, 올바른 역사교육에 나섬으로써, 전면적인 ‘법적 책임’을 이행해야 합니다. </p>
+            <a class="text-lg text-aa-purple-500 inline-flex items-center pt-2" href="/about/greetings/">더 알아보기
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
+              </svg>
+            </a>
+          </div>
+          <div class="flex-grow p-4 w-2/3 sm:mb-0 mb-6">
+            <div class="rounded-none h-64 overflow-hidden">
+              <img alt="content" class="object-cover object-center h-full w-full" src="https://durumi.io/cdn-cgi/image/fit=scale-down,width=1920/https://wwm-r2.womenandwar.workers.dev/exhibition/ex-04/section-01-right/13_%ec%a0%95%ec%8b%a0%eb%8c%80%20%eb%ac%b8%ec%a0%9c%ec%97%90%20%ea%b4%80%ed%95%9c%20%ea%b0%95%ec%9d%98.JPG">
+            </div>
+            <h2 class="text-xl font-medium title-font text-gray-900 mt-5">역사부정론반박을 위한 자료 모음</h2>
+            <p class="leading-relaxed mt-2">최근 하버드법대 램지어 미쓰비시 일본법 교수의 논문을 비롯하여 일본군성노예제 역사를 부정하고, 지난 30년 간 이어진 피해자들의 정의를 위한 외침과 운동을 외면하며, UN 등 국제사회에서 확인한 역사적 사실을 왜곡하는 백래시들이 이어지고 있습니다.<br>
+      
+              이에 역사부정론에 대한 반박자료를 모아서 소개하고자 합니다. 일본군성노예제 문제해결을 위한 운동이 굳건히 이어질 수 있도록 함께해주시기 바랍니다.</p>
+            <a class="text-lg text-aa-purple-500 inline-flex items-center pt-2" href="/about/greetings/">더 알아보기
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
+              </svg>
+            </a>
+          </div>
+        </div>  
+      </section>
       {{/* 뉴스레터 구독폼 */}}
       {{ partial "marketing/form--newsletter" . }}
       {{ partial "feedback/notifications" . }}
