--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,7 +9,7 @@
       {{ partial "marketing/banner--ww--slide" . }}
       
       {{/* 활동소개  */}}
-      <div class="container pt-12 py-20">
+      <div class="container pt-20">
         <div class="relative">
           <h1 class="text-4xl mb-4 text-aa-gray-900 font-bold">활동소개</h1>
           <a class="absolute top-2 right-0 text-aa-purple-500" href="/items">최근 활동 모두보기</a>
@@ -135,7 +135,7 @@
       {{/* 팩트체크 - data.yml에서 편집하도록 처리 */}}
       <section class="container pt-12 pb-12 text-gray-600 body-font">
         <div class="px-5 py-5 mx-auto">
-          <h1 class="text-4xl mb-4 text-aa-gray-900 font-bold">팩트체크</h1>
+          <h1 class="text-4xl mb-4 text-aa-gray-900 font-bold">팩트</h1>
         </div>
         <div class="flex sm:-m-4 -mx-4 -mb-10 -mt-4 pb-12">
           <div class="flex-1 p-4 md:w-1/3 sm:mb-0 mb-6">
