--- a/layouts/index.html
+++ b/layouts/index.html
@@ -140,7 +140,7 @@
         <div class="flex sm:-m-4 -mx-4 -mb-10 -mt-4 pb-12">
           <div class="flex-1 p-4 md:w-1/3 sm:mb-0 mb-6">
             <div class="h-64 overflow-hidden">
-              <img alt="content" class="object-cover object-center h-full w-full" src="https://womenandwar.net/kr/wp-content/uploads/2018/08/%E1%84%80%E1%85%AE%E1%86%AB%E1%84%8B%E1%85%AD%E1%86%BC%E1%84%90%E1%85%B3%E1%84%85%E1%85%A5%E1%86%A8%E1%84%8B%E1%85%B3%E1%84%85%E1%85%A9-%E1%84%8B%E1%85%B5%E1%84%83%E1%85%A9%E1%86%BC%E1%84%92%E1%85%A1%E1%84%82%E1%85%B3%E1%86%AB-%E1%84%8B%E1%85%B5%E1%86%AF%E1%84%87%E1%85%A9%E1%86%AB%E1%84%80%E1%85%AE%E1%86%AB%E1%84%89%E1%85%A5%E1%86%BC%E1%84%82%E1%85%A9%E1%84%8B%E1%85%A8%E1%84%8C%E1%85%A6-%E1%84%91%E1%85%B5%E1%84%92%E1%85%A2%E1%84%8C%E1%85%A1%E1%84%83%E1%85%B3%E1%86%AF-300x228.jpg">
+              <img alt="content" class="object-cover object-center h-full w-full" src="https://r2.womenandwar.net/2018/08/%E1%84%80%E1%85%AE%E1%86%AB%E1%84%8B%E1%85%AD%E1%86%BC%E1%84%90%E1%85%B3%E1%84%85%E1%85%A5%E1%86%A8%E1%84%8B%E1%85%B3%E1%84%85%E1%85%A9-%E1%84%8B%E1%85%B5%E1%84%83%E1%85%A9%E1%86%BC%E1%84%92%E1%85%A1%E1%84%82%E1%85%B3%E1%86%AB-%E1%84%8B%E1%85%B5%E1%86%AF%E1%84%87%E1%85%A9%E1%86%AB%E1%84%80%E1%85%AE%E1%86%AB%E1%84%89%E1%85%A5%E1%86%BC%E1%84%82%E1%85%A9%E1%84%8B%E1%85%A8%E1%84%8C%E1%85%A6-%E1%84%91%E1%85%B5%E1%84%92%E1%85%A2%E1%84%8C%E1%85%A1%E1%84%83%E1%85%B3%E1%86%AF-300x228.jpg">
             </div>
             <h2 class="text-xl font-medium title-font text-gray-900 mt-5">일본군성노예제란 ?</h2>
             <p class="text-base leading-relaxed mt-2">Swag shoivdigoitch literally meditation subway tile tumblr cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical XOXO lumbersexual.</p>
@@ -178,7 +178,7 @@
         <div class="flex sm:-m-4 -mx-4 -mb-10 -mt-4">
           <div class="flex-none p-4 w-1/3 sm:mb-0 mb-6">
             <div class="h-64 overflow-hidden">
-              <img alt="content" class="object-cover object-center h-full w-full" src="https://womenandwar.net/kr/wp-content/uploads/2021/04/IMG_7733-877x470.jpg">
+              <img alt="content" class="object-cover object-center h-full w-full" src="https://r2.womenandwar.net/2021/04/IMG_7733-877x470.jpg">
             </div>
             <h2 class="text-xl font-medium title-font text-gray-900 mt-5">일본국 상대 소송</h2>
             <p class="leading-relaxed mt-2">2021. 1. 8. 서울중앙지방법원(제34민사부, 재판장 김정곤)은 일본군‘위안부’ 피해자들이 일본국을 상대로 제기한 소송에서 원고들에 대한 피고 일본국의 손해배상책임을 인정하는 기념비적인 판결을 선고했습니다. 피해자들의 절박한 호소에 귀기울이며 ‘인권의 최후 보루’로서 책무를 다한 판결이었습니다. 일본정부는 하루빨리 일본군‘위안부’ 문제에 대한 사실인정, 공식사죄와 추모, 올바른 역사교육에 나섬으로써, 전면적인 ‘법적 책임’을 이행해야 합니다. </p>
