--- a/layouts/index.html
+++ b/layouts/index.html
@@ -152,7 +152,7 @@
           </div>
           <div class="flex-1 p-4 md:w-1/3 sm:mb-0 mb-6">
             <div class="rounded-none h-64 overflow-hidden">
-              <img alt="content" class="object-cover object-center h-full w-full" src="https://durumi.io/cdn-cgi/image/fit=scale-down,width=1920/https://wwm-r2.womenandwar.workers.dev/exhibition/ex-02/%ec%9a%b4%eb%8f%99%ec%82%ac%ea%b4%80/%ec%b9%a8%eb%ac%b5%ec%9d%84%ea%b9%a8%ed%8a%b8%eb%a6%ac%eb%8b%a4/%ec%b2%ab%ec%88%98%ec%9a%94%ec%a7%91%ed%9a%8c%20%ec%82%ac%eb%b3%b8.jpg">
+              <img alt="content" class="object-cover object-center h-full w-full" src="https://durumi.io/cdn-cgi/image/fit=scale-down,width=1920/https://r2.womenandwarmuseum.net/exhibition/ex-02/%ec%9a%b4%eb%8f%99%ec%82%ac%ea%b4%80/%ec%b9%a8%eb%ac%b5%ec%9d%84%ea%b9%a8%ed%8a%b8%eb%a6%ac%eb%8b%a4/%ec%b2%ab%ec%88%98%ec%9a%94%ec%a7%91%ed%9a%8c%20%ec%82%ac%eb%b3%b8.jpg">
             </div>
             <h2 class="text-xl font-medium title-font text-gray-900 mt-5">운동사</h2>
             <p class="text-base leading-relaxed mt-2">Swag shoivdigoitch literally meditation subway tile tumblr cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical XOXO lumbersexual.</p>
@@ -164,7 +164,7 @@
           </div>
           <div class="flex-1 p-4 md:w-1/3 sm:mb-0 mb-6">
             <div class="rounded-none h-64 overflow-hidden">
-              <img alt="content" class="object-cover object-center h-full w-full" src="https://durumi.io/cdn-cgi/image/fit=scale-down,width=1920/https://wwm-r2.womenandwar.workers.dev/exhibition/ex-02/%ec%9a%b4%eb%8f%99%ec%82%ac%ea%b4%80/%ec%b9%a8%eb%ac%b5%ec%9d%84%ea%b9%a8%ed%8a%b8%eb%a6%ac%eb%8b%a4/1990.11.16%2037%ea%b0%9c%20%ec%97%ac%ec%84%b1%eb%8b%a8%ec%b2%b4%ec%99%80%20%ea%b0%9c%ec%9d%b8%eb%93%a4%ec%9d%b4%20%ec%b0%b8%ec%97%ac%ed%95%98%ec%97%ac%20%ed%95%9c%ea%b5%ad%ec%a0%95%ec%8b%a0%eb%8c%80%eb%ac%b8%ec%a0%9c%eb%8c%80%ec%b1%85%ed%98%91%ec%9d%98%ed%9a%8c%20%ea%b2%b0%ec%84%b1.jpg">
+              <img alt="content" class="object-cover object-center h-full w-full" src="https://durumi.io/cdn-cgi/image/fit=scale-down,width=1920/https://r2.womenandwarmuseum.net/exhibition/ex-02/%ec%9a%b4%eb%8f%99%ec%82%ac%ea%b4%80/%ec%b9%a8%eb%ac%b5%ec%9d%84%ea%b9%a8%ed%8a%b8%eb%a6%ac%eb%8b%a4/1990.11.16%2037%ea%b0%9c%20%ec%97%ac%ec%84%b1%eb%8b%a8%ec%b2%b4%ec%99%80%20%ea%b0%9c%ec%9d%b8%eb%93%a4%ec%9d%b4%20%ec%b0%b8%ec%97%ac%ed%95%98%ec%97%ac%20%ed%95%9c%ea%b5%ad%ec%a0%95%ec%8b%a0%eb%8c%80%eb%ac%b8%ec%a0%9c%eb%8c%80%ec%b1%85%ed%98%91%ec%9d%98%ed%9a%8c%20%ea%b2%b0%ec%84%b1.jpg">
             </div>
             <h2 class="text-xl font-medium title-font text-gray-900 mt-5">피해자들의 외침 및 증언</h2>
             <p class="text-base leading-relaxed mt-2">Swag shoivdigoitch literally meditation subway tile tumblr cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical XOXO lumbersexual.</p>
@@ -190,7 +190,7 @@
           </div>
           <div class="flex-grow p-4 w-2/3 sm:mb-0 mb-6">
             <div class="rounded-none h-64 overflow-hidden">
-              <img alt="content" class="object-cover object-center h-full w-full" src="https://durumi.io/cdn-cgi/image/fit=scale-down,width=1920/https://wwm-r2.womenandwar.workers.dev/exhibition/ex-04/section-01-right/13_%ec%a0%95%ec%8b%a0%eb%8c%80%20%eb%ac%b8%ec%a0%9c%ec%97%90%20%ea%b4%80%ed%95%9c%20%ea%b0%95%ec%9d%98.JPG">
+              <img alt="content" class="object-cover object-center h-full w-full" src="https://durumi.io/cdn-cgi/image/fit=scale-down,width=1920/https://r2.womenandwarmuseum.net/exhibition/ex-04/section-01-right/13_%ec%a0%95%ec%8b%a0%eb%8c%80%20%eb%ac%b8%ec%a0%9c%ec%97%90%20%ea%b4%80%ed%95%9c%20%ea%b0%95%ec%9d%98.JPG">
             </div>
             <h2 class="text-xl font-medium title-font text-gray-900 mt-5">역사부정론반박을 위한 자료 모음</h2>
             <p class="leading-relaxed mt-2">최근 하버드법대 램지어 미쓰비시 일본법 교수의 논문을 비롯하여 일본군성노예제 역사를 부정하고, 지난 30년 간 이어진 피해자들의 정의를 위한 외침과 운동을 외면하며, UN 등 국제사회에서 확인한 역사적 사실을 왜곡하는 백래시들이 이어지고 있습니다.<br>
