--- a/layouts/index.html
+++ b/layouts/index.html
@@ -140,10 +140,10 @@
         <div class="flex sm:-m-4 -mx-4 -mb-10 -mt-4 pb-12">
           <div class="flex-1 p-4 md:w-1/3 sm:mb-0 mb-6">
             <div class="h-64 overflow-hidden">
-              <img alt="content" class="object-cover object-center h-full w-full" src="https://r2.womenandwar.net/2018/08/%E1%84%80%E1%85%AE%E1%86%AB%E1%84%8B%E1%85%AD%E1%86%BC%E1%84%90%E1%85%B3%E1%84%85%E1%85%A5%E1%86%A8%E1%84%8B%E1%85%B3%E1%84%85%E1%85%A9-%E1%84%8B%E1%85%B5%E1%84%83%E1%85%A9%E1%86%BC%E1%84%92%E1%85%A1%E1%84%82%E1%85%B3%E1%86%AB-%E1%84%8B%E1%85%B5%E1%86%AF%E1%84%87%E1%85%A9%E1%86%AB%E1%84%80%E1%85%AE%E1%86%AB%E1%84%89%E1%85%A5%E1%86%BC%E1%84%82%E1%85%A9%E1%84%8B%E1%85%A8%E1%84%8C%E1%85%A6-%E1%84%91%E1%85%B5%E1%84%92%E1%85%A2%E1%84%8C%E1%85%A1%E1%84%83%E1%85%B3%E1%86%AF-300x228.jpg">
+              <img alt="content" class="object-cover object-center h-full w-full" src="https://media.womenandwar.net/web/img/후원의밤.jpg">
             </div>
-            <h2 class="text-xl font-medium title-font text-gray-900 mt-5">일본군성노예제란 ?</h2>
-            <p class="text-base leading-relaxed mt-2">Swag shoivdigoitch literally meditation subway tile tumblr cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical XOXO lumbersexual.</p>
+            <h2 class="text-xl font-medium title-font text-gray-900 mt-5">후원의 밤</h2>
+            <p class="text-base leading-relaxed mt-2">11월 16일 수요일 오후 7시 서울 영등포구 하이서울유스호스텔 대강당에서 일본군성노예제 문제해결운동 32주년 기념 '2022 정의기억연대 후원의 밤'이 진행됩니다! 2022년 활동을 돌아보며, 후원회원분들께 감사 마음을 전달하는 시상식과 김복동인권평화상 시상, 문화공연 등 활동가들이 정성스레 마련한 자리에 여러분을 초대합니다.</p>
             <a class="text-lg text-aa-purple-500 inline-flex items-center pt-2" href="/comfort-women/meanings/">더 알아보기
               <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                   <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
@@ -152,10 +152,11 @@
           </div>
           <div class="flex-1 p-4 md:w-1/3 sm:mb-0 mb-6">
             <div class="rounded-none h-64 overflow-hidden">
-              <img alt="content" class="object-cover object-center h-full w-full" src="https://durumi.io/cdn-cgi/image/fit=scale-down,width=1920/https://r2.womenandwarmuseum.net/exhibition/ex-02/%ec%9a%b4%eb%8f%99%ec%82%ac%ea%b4%80/%ec%b9%a8%eb%ac%b5%ec%9d%84%ea%b9%a8%ed%8a%b8%eb%a6%ac%eb%8b%a4/%ec%b2%ab%ec%88%98%ec%9a%94%ec%a7%91%ed%9a%8c%20%ec%82%ac%eb%b3%b8.jpg">
+              <img alt="content" class="object-cover object-center h-full w-full" src="https://media.womenandwar.net/web/img/photo_2022-10-14_14-13-32.jpg">
             </div>
-            <h2 class="text-xl font-medium title-font text-gray-900 mt-5">운동사</h2>
-            <p class="text-base leading-relaxed mt-2">Swag shoivdigoitch literally meditation subway tile tumblr cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical XOXO lumbersexual.</p>
+            <h2 class="text-xl font-medium title-font text-gray-900 mt-5">피해자 보호법 개정 서명운동 [긴급 서명 요청] 일본군'위안부' 피해자에 대한 명예훼손을 막아주세요!</h2>
+            <p class="text-base leading-relaxed mt-2">역사부정세력은 일본군'위안부'피해자를 공격하며 사회적 약자에 대한 혐오를 부추기고 있습니다. 미래세대에게 올바른 역사의식을 심어주기 위해서, 약자에 대한 혐오확산을 멈추기 위해서 역사부정세력의 만행을 막아줄 일본군'위안부'피해자 보호법 개정이 필요합니다. 지금 여러분의 서명으로 힘을 보태주세요!
+            </p>
             <a class="text-lg text-aa-purple-500 inline-flex items-center pt-2" href="/about/greetings/">더 알아보기
               <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                   <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
@@ -164,10 +165,10 @@
           </div>
           <div class="flex-1 p-4 md:w-1/3 sm:mb-0 mb-6">
             <div class="rounded-none h-64 overflow-hidden">
-              <img alt="content" class="object-cover object-center h-full w-full" src="https://durumi.io/cdn-cgi/image/fit=scale-down,width=1920/https://r2.womenandwarmuseum.net/exhibition/ex-02/%ec%9a%b4%eb%8f%99%ec%82%ac%ea%b4%80/%ec%b9%a8%eb%ac%b5%ec%9d%84%ea%b9%a8%ed%8a%b8%eb%a6%ac%eb%8b%a4/1990.11.16%2037%ea%b0%9c%20%ec%97%ac%ec%84%b1%eb%8b%a8%ec%b2%b4%ec%99%80%20%ea%b0%9c%ec%9d%b8%eb%93%a4%ec%9d%b4%20%ec%b0%b8%ec%97%ac%ed%95%98%ec%97%ac%20%ed%95%9c%ea%b5%ad%ec%a0%95%ec%8b%a0%eb%8c%80%eb%ac%b8%ec%a0%9c%eb%8c%80%ec%b1%85%ed%98%91%ec%9d%98%ed%9a%8c%20%ea%b2%b0%ec%84%b1.jpg">
+              <img alt="content" class="object-cover object-center h-full w-full" src="https://media.womenandwar.net/web/img/첫수요집회 사본.jpg">
             </div>
-            <h2 class="text-xl font-medium title-font text-gray-900 mt-5">피해자들의 외침 및 증언</h2>
-            <p class="text-base leading-relaxed mt-2">Swag shoivdigoitch literally meditation subway tile tumblr cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical XOXO lumbersexual.</p>
+            <h2 class="text-xl font-medium title-font text-gray-900 mt-5">수요시위</h2>
+            <p class="text-base leading-relaxed mt-2">일본군성노예제피해자들과 연대하는 시민들은 1992년 1월 8일 일본대사관 앞에서 첫 시위를 시작한 이래 30여 년 동안 변함없이 수요시위를 개최하여 평화적인 방법으로 일본정부에 공식사죄를 요구하고 있습니다. 오늘날 수요시위는 미래세대들이 인권과 평화의 중요성을 배우는 살아있는 역사·인권·평화 교육의 공간이자, 국경을 넘어선 세계 시민들의 연대의 장으로 확대되었습니다. </p>
             <a class="text-lg text-aa-purple-500 inline-flex items-center pt-2" href="/about/greetings/">더 알아보기
               <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                   <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
@@ -178,10 +179,10 @@
         <div class="flex sm:-m-4 -mx-4 -mb-10 -mt-4">
           <div class="flex-none p-4 w-1/3 sm:mb-0 mb-6">
             <div class="h-64 overflow-hidden">
-              <img alt="content" class="object-cover object-center h-full w-full" src="https://r2.womenandwar.net/2021/04/IMG_7733-877x470.jpg">
+              <img alt="content" class="object-cover object-center h-full w-full" src="https://media.womenandwar.net/web/img/1991 김학순 할머니 첫증언.png">
             </div>
-            <h2 class="text-xl font-medium title-font text-gray-900 mt-5">일본국 상대 소송</h2>
-            <p class="leading-relaxed mt-2">2021. 1. 8. 서울중앙지방법원(제34민사부, 재판장 김정곤)은 일본군‘위안부’ 피해자들이 일본국을 상대로 제기한 소송에서 원고들에 대한 피고 일본국의 손해배상책임을 인정하는 기념비적인 판결을 선고했습니다. 피해자들의 절박한 호소에 귀기울이며 ‘인권의 최후 보루’로서 책무를 다한 판결이었습니다. 일본정부는 하루빨리 일본군‘위안부’ 문제에 대한 사실인정, 공식사죄와 추모, 올바른 역사교육에 나섬으로써, 전면적인 ‘법적 책임’을 이행해야 합니다. </p>
+            <h2 class="text-xl font-medium title-font text-gray-900 mt-5">피해자들의 외침(일본군성노예제란)</h2>
+            <p class="leading-relaxed mt-2">일본군성노예제란 1930년대부터 1945년 일본의 패전에 이르기까지 일본군이 제도적으로 ‘군위안소’를 설치하여 점령지와 식민지 여성들을 동원해 성노예로 만든 범죄를 말합니다. 범죄의 주체인 일본군을 명기하고 역사적인 용어로서의 위안부를 따옴표 안에 넣어 일본군‘위안부’로 표기하며, 영어로는 Military Sexual Slavery by Japan 으로 표현하여 ‘성노예’라는 범죄의 본질을 드러내고 있습니다.</p>
             <a class="text-lg text-aa-purple-500 inline-flex items-center pt-2" href="/about/greetings/">더 알아보기
               <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                   <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
@@ -190,12 +191,10 @@
           </div>
           <div class="flex-grow p-4 w-2/3 sm:mb-0 mb-6">
             <div class="rounded-none h-64 overflow-hidden">
-              <img alt="content" class="object-cover object-center h-full w-full" src="https://durumi.io/cdn-cgi/image/fit=scale-down,width=1920/https://r2.womenandwarmuseum.net/exhibition/ex-04/section-01-right/13_%ec%a0%95%ec%8b%a0%eb%8c%80%20%eb%ac%b8%ec%a0%9c%ec%97%90%20%ea%b4%80%ed%95%9c%20%ea%b0%95%ec%9d%98.JPG">
+              <img alt="content" class="object-cover object-center h-full w-full" src="https://media.womenandwar.net/web/img/성폭력_반대_16일_캠페인에_참여한_마마유시리카_여성들.jpg">
             </div>
-            <h2 class="text-xl font-medium title-font text-gray-900 mt-5">역사부정론반박을 위한 자료 모음</h2>
-            <p class="leading-relaxed mt-2">최근 하버드법대 램지어 미쓰비시 일본법 교수의 논문을 비롯하여 일본군성노예제 역사를 부정하고, 지난 30년 간 이어진 피해자들의 정의를 위한 외침과 운동을 외면하며, UN 등 국제사회에서 확인한 역사적 사실을 왜곡하는 백래시들이 이어지고 있습니다.<br>
-      
-              이에 역사부정론에 대한 반박자료를 모아서 소개하고자 합니다. 일본군성노예제 문제해결을 위한 운동이 굳건히 이어질 수 있도록 함께해주시기 바랍니다.</p>
+            <h2 class="text-xl font-medium title-font text-gray-900 mt-5">나비기금</h2>
+            <p class="leading-relaxed mt-2">2012년 3월 8일 세계 여성의 날, 김복동, 길원옥 할머니께서 일본정부로부터 법적배상을 받으면 자신들과 같이 고통받고 있는 전시 성폭력피해 여성들을 위한 지원활동을 기부하고 싶다는 의지를 밝히셨고, 할머니들의 이러한 뜻에 따라 정의기억연대는 나비기금을 제정하여 콩고, 우간다, 베트남 등의 전시성폭력 피해 여성과 아동들을 지원하며 연대하고 있습니다.</p>
             <a class="text-lg text-aa-purple-500 inline-flex items-center pt-2" href="/about/greetings/">더 알아보기
               <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                   <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
