donate-and-support 메뉴를 좀 더 정리합니다.

--- a/layouts/shortcodes/donate-and-support/form--application-volunteer.html
+++ b/layouts/shortcodes/donate-and-support/form--application-volunteer.html
@@ -7,11 +7,10 @@
         <h2 class="text-aa-gray-900 font-bold text-3xl mb-4">봉사 / 재능 기부 항목</h2>
         <div>
             <ol>
-                <li>1. 기증 의사 접수</li>
-                <li>2. 수집여부 결정 및 협의</li>
-                <li>3. 기증원 접수</li>
-                <li>4. 기록물 인수</li>
-                <li>5. 기증증서 발급</li>
+                <li>1. 봉사/재능 의사 접수</li>
+                <li>2. 봉사/재능 참여 결정 및 협의</li>
+                <li>3. 봉사활동 / 재능기부 진행</li>
+                <li>4. 봉사/재능 증명서 발급</li>
             </ol>
         </div>
     </div>
@@ -33,7 +32,7 @@
             </div>
             <div class="mb-6">
                 <label class="block text-sm mb-1" for="address">주소(거주하는 곳)<span class="text-aa-purple-500">(필수)</span></label>
-                <input class="block w-full h-12 bg-aa-gray-100 px-3" type="text" name="address" id="address" x-model="formData.address" placeholder="기록물 인수시에 필요합니다" required>
+                <input class="block w-full h-12 bg-aa-gray-100 px-3" type="text" name="address" id="address" x-model="formData.address" placeholder="자료 발송을 위해 필요합니다." required>
             </div>
             <div class="mb-6">
                 <label class="block text-sm mb-1" for="message">봉사/재능기부 항목 및 하고 싶은 일<span class="text-aa-purple-500">(필수)</span></label>
