--- a/layouts/shortcodes/donate-and-support/form--support-suyo.html
+++ b/layouts/shortcodes/donate-and-support/form--support-suyo.html
@@ -3,15 +3,17 @@
     <div class="text-base p-4 bg-aa-gray-100 mb-10">
       (재)일본군성노예제문제해결을위한정의기억연대는 일본군'위안부'문제 및 문제 해결을 위한 수요시위 참여에 적극 동참하길 요청합니다.
     </div>
-    <div class="mb-10">
-        <h2 class="text-aa-gray-900 font-bold text-3xl mb-4">대상기록물 유형</h2>
-        <div>
-            어디서 ? : 매주 수요일 낮 12시 주한 일본대사관 앞 ‘평화로’에서 진행합니다. 지도에서 종로구에 위치한 연합뉴스빌딩을 검색하고 오시면 더 쉽게 찾으실 수 있습니다.<br/>
-            매주하나요 ? : 그렇습니다. 비가 와도 눈이 와도, 명절 연휴에도 진행합니다.<br/>
-            발언을 하고싶습니다.: 자유발언은 수요시위 당일 현장에서 받는 것을 원칙으로 하고 있습니다. 미리 전화주시면 방법에 대해 알려드리겠습니다.<br/>
-            공연을 하고 싶습니다. : 주관 단체가 매주 바뀌므로 미리 협의를 해야 하니 반드시 사무처로 1달 전에 연락을 주셔야 합니다.
-        </div>
-    </div>
+    <h2 class="text-aa-gray-900 font-bold text-3xl mb-4">수요시위 관련 FAQ</h2>
+    <ol class="mb-10">
+      <li>
+          <ol class="ml-2">
+              <li>* 어디서 ? : 매주 수요일 낮 12시 주한 일본대사관 앞 ‘평화로’에서 진행합니다. 지도에서 종로구에 위치한 연합뉴스빌딩을 검색하고 오시면 더 쉽게 찾으실 수 있습니다.</li>
+              <li>* 매주하나요 ? : 그렇습니다. 비가 와도 눈이 와도, 명절 연휴에도 진행합니다.</li>
+              <li>* 발언을 하고싶습니다.: 자유발언은 수요시위 당일 현장에서 받는 것을 원칙으로 하고 있습니다. 미리 전화주시면 방법에 대해 알려드리겠습니다.</li>
+              <li>* 공연을 하고 싶습니다. : 주관 단체가 매주 바뀌므로 미리 협의를 해야 하니 반드시 사무처로 1달 전에 연락을 주셔야 합니다.</li>
+            </ol>
+      </li>
+  </ol>
     <div class="mb-10">
         <h2 class="text-aa-gray-900 font-bold text-3xl mb-4">수요시위 참여신청</h2>
         <form class="text-base" x-data="donationRequestForm()" @submit.prevent="submit" id="donation-request">
@@ -29,11 +31,11 @@
             </div>
             <div class="mb-6">
                 <label class="block text-sm mb-1" for="address">주소(거주하는 곳)<span class="text-aa-purple-500">(필수)</span></label>
-                <input class="block w-full h-12 bg-aa-gray-100 px-3" type="text" name="address" id="address" x-model="formData.address" placeholder="기록물 인수시에 필요합니다" required>
+                <input class="block w-full h-12 bg-aa-gray-100 px-3" type="text" name="address" id="address" x-model="formData.address" placeholder="자료 발송을 위해 필요합니다." required>
             </div>
             <div class="mb-6">
                 <label class="block text-sm mb-1" for="message">참여의사 및 메세지<span class="text-aa-purple-500">(필수)</span></label>
-                <textarea class="block w-full bg-aa-gray-100 p-3 h-20" type="text" name="message" id="message" x-model="formData.message" placeholder="설명을 남겨주세요" required></textarea>
+                <textarea class="block w-full bg-aa-gray-100 p-3 h-20" type="text" name="message" id="message" x-model="formData.message" placeholder="간단한 의사와 메세지를 적어주세요." required></textarea>
             </div>
             <div class="mb-3 p-3 bg-aa-gray-100">
               (재)일본군성노예제문제해결을위한정의기억연대는 개인정보보호법 등 관련법령상의 개인정보보호 규정을 준수하며, 개인정보 취급에 대한 사항은 다음과 같습니다.<br/><br/>
