--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -43,7 +43,7 @@
   {{/* @see https://github.com/team-durumi/tailwind-aa-theme/tree/master/layouts/partials/basic */}}
     {{- block "header" . }}{{ partial "base/header-ww.html" . }}{{- end }}
     {{- block "main" . }}{{- end }}
-    {{- block "footer" . }}{{ partial "base/footer.html" . }}{{- end }}
+    {{- block "footer" . }}{{ partial "base/footer-ww.html" . }}{{- end }}
     {{- block "bottomJs" . }}{{ end -}}
   </body>
 </html>
