로고사이즈를 조정하고, 잘못된 링크를 수정

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -191,7 +191,7 @@
           </div>
           <div class="flex-grow p-4 w-2/3 sm:mb-0 mb-6">
             <div class="rounded-none h-64 overflow-hidden">
-              <img alt="content" class="object-cover object-center h-full w-full" src="https://media.womenandwar.net/web/img/성폭력_반대_16일_캠페인에_참여한_마마유시리카_여성들.jpg">
+              <img alt="content" class="object-cover object-center h-full w-full" src="https://media.r2.womenandwar.net/web/img/성폭력_반대_16일_캠페인에_참여한_마마유시리카_여성들.jpg">
             </div>
             <h2 class="text-xl font-medium title-font text-gray-900 mt-5">나비기금</h2>
             <p class="leading-relaxed mt-2">2012년 3월 8일 세계 여성의 날, 김복동, 길원옥 할머니께서 일본정부로부터 법적배상을 받으면 자신들과 같이 고통받고 있는 전시 성폭력피해 여성들을 위한 지원활동을 기부하고 싶다는 의지를 밝히셨고, 할머니들의 이러한 뜻에 따라 정의기억연대는 나비기금을 제정하여 콩고, 우간다, 베트남 등의 전시성폭력 피해 여성과 아동들을 지원하며 연대하고 있습니다.</p>
