--- a/layouts/about/section_single.html
+++ b/layouts/about/section_single.html
@@ -1,12 +1,15 @@
 {{ define "main" }}
-{{- `<!-- _default/list.html  -->` | safeHTML -}}
-<div class="contents-area" id="main-content">
-  {{ partial "base/breadcrumb" . }}
+  {{ if eq .RelPermalink "/about/budget/" }}
   <div class="contents-area" id="main-content">
+    {{ partial "base/breadcrumb" . }}
     <div class="container pt-12 pb-28 relative">
-      <h1 class="text-4xl mb-4 text-aa-gray-900 font-bold">{{ .Title }}</h1>
+      <h1 class="text-4xl mb-4 font-bold mb-8">{{ .Title }}</h1>
       {{ partial "marketing/sharingbutton" . }}
-      {{ partial "marketing/banner--section-single" . }} 
+
+      {{ if ne .RelPermalink "/about/budget/" }}
+        {{ partial "marketing/banner--section-single" . }}
+      {{ end }}
+
       <div class="flex text-sm text-aa-700 py-2 border-aa-purple-500 border-b-2">
         <span class="w-4/6 text-center">제목</span>
         <span class="w-1/6 text-center">날짜</span>
@@ -20,10 +23,20 @@
         {{ range $paginator.Pages }}
           {{ .Render "li" }}
         {{ end }}
-      </ul> 
+      </ul>
       {{ partial "app/pagination.html" $paginator }}
+
     </div>
-  </div> 
-</div>  
-{{- `<!-- _default/list.html  -->` | safeHTML -}}
-{{ end}}
+  </div>
+  {{ else }}
+  <div class="contents-area" id="main-content">
+    {{ partial "base/breadcrumb" . }}
+    <div class="container pt-12 pb-28 relative">
+      <h1 class="text-4xl mb-4 text-aa-gray-900 font-bold">{{ .Title }}</h1>
+      {{ partial "marketing/sharingbutton" . }}
+      {{ partial "marketing/banner--section-single" . }}
+      {{ .Content }}
+    </div>
+  </div>
+  {{ end }}
+{{ end }}
