박물관에서 사용하던 페이지를 활용해 en / jp 경로를 만듭니다.

--- a/layouts/partials/base/header-ww.html
+++ b/layouts/partials/base/header-ww.html
@@ -3,13 +3,13 @@
     <div class="bg-aa-purple-500 text-white text-right lg:px-8 px-4 py-2 relative z-10 hidden lg:block">
       <ul class="inline-flex">
         <li class="rounded-full px-4 py-2 text-white bg-aa-purple-500 hover:bg-white hover:text-aa-gray-900 text-sm">
-          <a href="">KR</a> 
+          <a href="/">KR</a> 
         </li>
         <li class="rounded-full px-4 py-2 text-white bg-aa-purple-500 hover:bg-white hover:text-aa-gray-900 text-sm">
-          <a href="">EN</a> 
+          <a href="/guide/en-information">EN</a> 
         </li>
         <li class="rounded-full px-4 py-2 text-white bg-aa-purple-500 hover:bg-white hover:text-aa-gray-900 text-sm">
-          <a href="">日語</a>
+          <a href="/guide/jp-information">日語</a>
         </li>        
       </ul>
     </div>
