--- a/static/assets/css/style-custom.css
+++ b/static/assets/css/style-custom.css
@@ -11,7 +11,7 @@ html {
     display:block;
     width:17.25rem;
     height:3.525rem;
-    background:url(/images/logo.png) no-repeat 0 0;
+    background:url(/images/logo-ww.png) no-repeat 0 0;
     background-size:contain;
     text-indent:-9999px;
   }
