간격을 조정합니다.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,7 +9,7 @@
       {{ partial "marketing/banner--ww--slide" . }}
       
       {{/* 정의기억연대 현안 */}}
-      <section class="container py-12 text-gray-600 body-font">
+      <section class="container py-24 text-gray-600 body-font">
         <div class="flex sm:-m-4 -mx-4 -mb-10 -mt-4 pb-12">
           <div class="flex-wrap p-4 md:w-1/3 sm:w-full sm:mb-0 mb-6">
             <div class="h-64 overflow-hidden">
@@ -48,7 +48,7 @@
       </section>
 
       {{/* 공지사항 / 보도자료 */}}    
-      <div class="container pt-12 pb-12">
+      <div class="container pb-12">
         <h1 class="text-4xl mb-4 text-aa-gray-900 font-bold">공지사항</h1>
         <div class="flex text-sm text-aa-700 py-2 border-aa-purple-500 border-b-2">
             <span class="w-4/6 text-center">제목</span>
